--- a/index.html
+++ b/index.html
@@ -70,57 +70,13 @@
         .calendario .weekend {
             background-color: #f0f0f0;
         }
-        .calendario .selected-red {
-            background-color: #ffcccc;
+        .calendario .selected-red.festivo-nacional-madrid,
+        .calendario .selected-yellow.festivo-nacional-madrid {
+            background-image: linear-gradient(to bottom right, #ffcccc 50%, #ffa07a 50%);
         }
-        .calendario .selected-yellow {
-            background-color: #ffffcc;
-        }
-        .calendario .festivo-nacional-madrid {
-            background-color: #ffa07a;
-        }
-        .calendario .festivo-manual {
-            background-color: #add8e6;
-        }
-        .medico-list {
-            margin-top: 20px;
-        }
-        .medico-item {
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            margin-bottom: 10px;
-            display: flex;
-            justify-content: space-between;
-        }
-        .delete-btn {
-            background-color: red;
-            color: white;
-            border: none;
-            cursor: pointer;
-            padding: 5px 10px;
-        }
-        nav {
-            margin-top: 20px;
-        }
-        nav a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #4CAF50;
-        }
-        .legend {
-            margin-top: 20px;
-            display: flex;
-            justify-content: space-around;
-        }
-        .legend-item {
-            display: flex;
-            align-items: center;
-        }
-        .legend-color {
-            width: 20px;
-            height: 20px;
-            margin-right: 5px;
+        .calendario .selected-red.festivo-manual,
+        .calendario .selected-yellow.festivo-manual {
+            background-image: linear-gradient(to bottom right, #ffcccc 50%, #add8e6 50%);
         }
     </style>
 </head>
@@ -206,7 +162,6 @@
             <a href="festivos.html">Calendario de Festivos</a>
         </nav>
     </div>
-
     <script>
         const medicoList = document.getElementById('medicoList');
         const medicoSelect = document.getElementById('medico');
@@ -365,22 +320,20 @@
         }
 
         function seleccionarDia(elemento, fecha) {
-            if (festivosNacionales[fecha] || festivosMadrid[fecha] || festivosManuales[fecha]) {
-                // No permitir selección en días festivos
-                return;
-            }
+            let clase = elemento.className;
 
-            if (elemento.classList.contains('selected-red')) {
-                elemento.classList.remove('selected-red');
-                elemento.classList.add('selected-yellow');
+            if (clase.includes('selected-red')) {
+                clase = clase.replace('selected-red', 'selected-yellow');
                 calendarioSeleccion[fecha] = 'amarillo';
-            } else if (elemento.classList.contains('selected-yellow')) {
-                elemento.classList.remove('selected-yellow');
+            } else if (clase.includes('selected-yellow')) {
+                clase = clase.replace('selected-yellow', '');
                 delete calendarioSeleccion[fecha];
             } else {
-                elemento.classList.add('selected-red');
+                clase += ' selected-red';
                 calendarioSeleccion[fecha] = 'rojo';
             }
+
+            elemento.className = clase;
         }
 
         function guardarCambios() {
@@ -391,7 +344,6 @@
             }
             localStorage.setItem(`calendario_${correoMedico}`, JSON.stringify(calendarioSeleccion));
             alert("Cambios guardados correctamente.");
-        }
-    </script>
+        }    </script>
 </body>
 </html>
