--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <a href="consultas.html">Crear Consultas</a>
             <a href="calendario-consultas.html">Calendario de Consultas</a>
             <a href="festivos.html">Calendario de Festivos</a>
-            <a href="turno.html">Turnos</a>
+            <a href="turnos.html">Turnos</a>
         </nav>
     </div>
 
