--- a/turnos.html
+++ b/turnos.html
@@ -77,6 +77,17 @@
             text-align: center;
             margin-bottom: 5px;
         }
+        .turno-asignado {
+            background-color: #e6f3ff;
+            padding: 2px 5px;
+            margin: 2px 0;
+            font-size: 0.9em;
+        }
+        .eliminar-turno {
+            color: red;
+            cursor: pointer;
+            margin-left: 5px;
+        }
         nav {
             margin-top: 20px;
             text-align: center;
@@ -157,7 +168,7 @@
                 const turnoElement = document.createElement('div');
                 turnoElement.className = 'turno';
                 turnoElement.draggable = true;
-                turnoElement.innerHTML = `${turno.nombre} (${turno.inicio} - ${turno.fin}) <span class="eliminar-turno" onclick="eliminarTurno(${index})">❌</span>`;
+                turnoElement.innerHTML = `${turno.nombre} (${turno.inicio} - ${turno.fin})`;
                 turnoElement.addEventListener('dragstart', (e) => drag(e, index));
                 turnosList.appendChild(turnoElement);
             });
@@ -205,9 +216,9 @@
 
         function generarCalendario() {
             const calendario = document.getElementById('calendario');
+            calendario.innerHTML = '';
             const diasSemana = ['Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb', 'Dom'];
             
-            // Agregar encabezados de días
             diasSemana.forEach(dia => {
                 const diaHeader = document.createElement('div');
                 diaHeader.className = 'dia-header';
@@ -215,18 +226,34 @@
                 calendario.appendChild(diaHeader);
             });
             
-            // Agregar días del mes (ejemplo para 31 días)
             for (let i = 1; i <= 31; i++) {
                 const dia = document.createElement('div');
                 dia.className = 'dia';
                 dia.innerHTML = `<div class="dia-header">${i}</div>`;
-                dia.ondrop = drop;
+                dia.ondrop = (e) => drop(e, i);
                 dia.ondragover = allowDrop;
                 calendario.appendChild(dia);
             }
         }
 
-        // Inicializar
+        function actualizarCalendario() {
+            const dias = document.querySelectorAll('.dia');
+            dias.forEach((dia, index) => {
+                const diaNum = index + 1;
+                const turnosDia = turnosAsignados[diaNum] || [];
+                let turnosHTML = '';
+                turnosDia.forEach((turno, turnoIndex) => {
+                    turnosHTML += `
+                        <div class="turno-asignado">
+                            ${turno.nombre} (${turno.inicio} - ${turno.fin})
+                            <span class="eliminar-turno" onclick="eliminarTurno(${diaNum}, ${turnoIndex})">❌</span>
+                        </div>
+                    `;
+                });
+                dia.innerHTML = `<div class="dia-header">${diaNum}</div>${turnosHTML}`;
+            });
+        }
+
         window.onload = function() {
             generarOpcionesHoras();
             generarCalendario();
