--- a/turnos.html
+++ b/turnos.html
@@ -104,6 +104,10 @@
         }
         .festivo {
             background-color: #ffcccb;
+        }        .eliminar-turno {
+            color: red;
+            cursor: pointer;
+            margin-left: 5px;
         }
     </style>
 </head>
@@ -137,8 +141,8 @@
         
         <div id="calendario"></div>
 
-        <div class="papelera" ondrop="eliminarTurno(event)" ondragover="allowDrop(event)">
-            Arrastre aquí para eliminar el turno
+        <div class="papelera" ondrop="eliminarTurnoAsignado(event)" ondragover="allowDrop(event)">
+            Arrastre aquí para eliminar el turno asignado
         </div>
 
         <button onclick="guardarTurnosAsignados()">Guardar Asignaciones</button>
@@ -156,15 +160,7 @@
         let festivosManuales = {};
 
         function generarOpcionesHoras() {
-            const horaInicio = document.getElementById('horaInicio');
-            const horaFin = document.getElementById('horaFin');
-            for (let i = 0; i < 24; i++) {
-                for (let j = 0; j < 60; j += 30) {
-                    const hora = `${i.toString().padStart(2, '0')}:${j.toString().padStart(2, '0')}`;
-                    horaInicio.innerHTML += `<option value="${hora}">${hora}</option>`;
-                    horaFin.innerHTML += `<option value="${hora}">${hora}</option>`;
-                }
-            }
+            // ... (mantener la función existente) ...
         }
 
         function crearTurno() {
@@ -191,11 +187,20 @@
                 const turnoElement = document.createElement('div');
                 turnoElement.className = 'turno';
                 turnoElement.draggable = true;
-                turnoElement.innerHTML = `${turno.nombre} (${turno.inicio} - ${turno.fin})`;
+                turnoElement.innerHTML = `
+                    ${turno.nombre} (${turno.inicio} - ${turno.fin})
+                    <span class="eliminar-turno" onclick="eliminarTurnoCreado(${turno.id})">❌</span>
+                `;
                 turnoElement.setAttribute('data-turno-id', turno.id);
                 turnoElement.addEventListener('dragstart', drag);
                 turnosList.appendChild(turnoElement);
             });
+        }
+
+        function eliminarTurnoCreado(id) {
+            turnosCreados = turnosCreados.filter(t => t.id !== id);
+            localStorage.setItem('turnosCreados', JSON.stringify(turnosCreados));
+            actualizarListaTurnos();
         }
 
         function drag(ev) {
@@ -215,12 +220,12 @@
                 if (!turnosAsignados[fecha]) {
                     turnosAsignados[fecha] = [];
                 }
-                turnosAsignados[fecha].push(turno);
+                turnosAsignados[fecha].push({...turno});
                 actualizarCalendario();
             }
         }
 
-        function eliminarTurno(ev) {
+        function eliminarTurnoAsignado(ev) {
             ev.preventDefault();
             const turnoId = ev.dataTransfer.getData("text");
             Object.keys(turnosAsignados).forEach(fecha => {
