--- a/turnos.html
+++ b/turnos.html
@@ -104,6 +104,10 @@
         }
         .festivo {
             background-color: #ffcccb;
+        }        .eliminar-turno {
+            color: red;
+            cursor: pointer;
+            margin-left: 5px;
         }
     </style>
 </head>
@@ -137,8 +141,8 @@
         
         <div id="calendario"></div>
 
-        <div class="papelera" ondrop="eliminarTurno(event)" ondragover="allowDrop(event)">
-            Arrastre aquí para eliminar el turno
+        <div class="papelera" ondrop="eliminarTurnoAsignado(event)" ondragover="allowDrop(event)">
+            Arrastre aquí para eliminar el turno asignado
         </div>
 
         <button onclick="guardarTurnosAsignados()">Guardar Asignaciones</button>
@@ -191,11 +195,20 @@
                 const turnoElement = document.createElement('div');
                 turnoElement.className = 'turno';
                 turnoElement.draggable = true;
-                turnoElement.innerHTML = `${turno.nombre} (${turno.inicio} - ${turno.fin})`;
+                turnoElement.innerHTML = `
+                    ${turno.nombre} (${turno.inicio} - ${turno.fin})
+                    <span class="eliminar-turno" onclick="eliminarTurnoCreado(${turno.id})">❌</span>
+                `;
                 turnoElement.setAttribute('data-turno-id', turno.id);
                 turnoElement.addEventListener('dragstart', drag);
                 turnosList.appendChild(turnoElement);
             });
+        }
+
+        function eliminarTurnoCreado(id) {
+            turnosCreados = turnosCreados.filter(t => t.id !== id);
+            localStorage.setItem('turnosCreados', JSON.stringify(turnosCreados));
+            actualizarListaTurnos();
         }
 
         function drag(ev) {
@@ -220,7 +233,7 @@
             }
         }
 
-        function eliminarTurno(ev) {
+        function eliminarTurnoAsignado(ev) {
             ev.preventDefault();
             const turnoId = ev.dataTransfer.getData("text");
             Object.keys(turnosAsignados).forEach(fecha => {
